--- a/src/components/ui/CallToAction/styles.module.css
+++ b/src/components/ui/CallToAction/styles.module.css
@@ -1,10 +1,8 @@
 .button {
 	width: 100%;
-	height: 80px;
 
 	background-color: var(--color-accent-2);
 	border-radius: 150px;
-	/* padding-left: 50px; */
 	position: relative;
 }
 
@@ -18,8 +16,6 @@
 
 .action {
 	position: absolute;
-	height: 80px;
-	width: 80px;
 	background-color: var(--color-main);
 	z-index: 0;
 	right: 0;
@@ -35,10 +31,6 @@
 
 .arrowCircle {
 	position: absolute;
-	right: 25px;
-	top: 25px;
-	width: 30px;
-	height: 30px;
 	border-radius: 50%;
 	transition: 0.3s ease-out;
 }
@@ -53,7 +45,15 @@
 	width: 100%;
 	width: 40px;
 	height: 40px;
-	right: 20px;
-	top: 20px;
+	right: 11px;
+	top: 12px;
 	transform: rotate(90deg);
+}
+
+@media (min-width: 1024px) {
+	.button:hover .action .arrowCircle,
+	.button:target .action .arrowCircle {
+		right: 20px;
+		top: 20px;
+	}
 }
