--- a/src/components/ui/PopUp/style.module.css
+++ b/src/components/ui/PopUp/style.module.css
@@ -8,22 +8,43 @@
 }
 
 .modal {
-  background-color: #1C1C1C;
-  transition: all .3s ease;
+  background-color: #1c1c1c;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, .1);
+  transform: translate(-50%, -50%) scale(1.2);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  z-index: 9;
+  overflow: hidden;
+
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s linear;
+
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal.active {
+  transform: translate(-50%, -50%) scale(1);
+  opacity: 1;
+  pointer-events: all;
 }
 
 .section {
   top: 0;
   left: 0;
+  transition: all 0.3s ease;
+  pointer-events: none;
+  opacity: 0;
+}
+
+.section.active {
+  opacity: 1;
 }
 
 .title {
   color: var(--color-main);
 }
+
 
 .gratitudeTitle {
   color: var(--color-accent);
@@ -68,7 +89,7 @@
   background-color: transparent;
   border: 1px solid #7001fe80;
   flex: 1;
-  transition: all .3s ease-out;
+  transition: all 0.3s ease-out;
 }
 
 .feedbackInput::placeholder {
@@ -87,4 +108,3 @@
 .feedbackInput:hover {
   border: 1px solid var(--color-accent) !important;
 }
-
