--- a/src/modules/landing/SevenScreen/style.module.css
+++ b/src/modules/landing/SevenScreen/style.module.css
@@ -69,7 +69,7 @@
 .aside {
   background-color: var(--color-white);
   background-size: 130%;
-  background-position: center 45%;
+  background-position: center 20%;
   flex-direction: column;
 }
 
@@ -91,4 +91,15 @@
   padding: 15px;
   background: #8FFE01;
   border: 1px solid #61616133
+}
+
+.tabletBox {
+  transition: left .5s cubic-bezier(0.4, 0, 0.2, 1);
+  left: 500px;
+  opacity: 0;
+}
+
+.tabletBox.active {
+  opacity: 1;
+  left: 0;
 }
