--- a/src/modules/landing/ThirdScreen/style.module.css
+++ b/src/modules/landing/ThirdScreen/style.module.css
@@ -78,5 +78,15 @@
 }
 
 .rotating-background {
-  animation: rotate 20s linear infinite;
+  position: relative;
+  overflow: hidden;
+}
+
+.rotating-background::before {
+  content: '';
+  position: absolute;
+  background-size: contain; /* Или другое значение в зависимости от вашего требования */
+  transform: translate(-50%, -50%) rotate(0deg);
+  transform-origin: center;
+  animation: rotate 75s linear infinite;
 }
