--- a/src/modules/landing/FirstScreen/style.module.css
+++ b/src/modules/landing/FirstScreen/style.module.css
@@ -21,6 +21,7 @@
   /* font-size: 46px; */
   /* font-weight: 500; */
   /* line-height: 47px; */
+  font-family: 'Igra Sans', sans-serif; 
   text-transform: uppercase;
   margin-bottom: 30px;
   letter-spacing: 0.5rem;
