--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face { 
+  font-family: "Igra Sans"; 
+  src: url('../fonts/IgraSans/IgraSans.otf'); 
+  font-style: normal; 
+} 
+/*   
+@font-face { 
+  font-family: "Igra Sans"; 
+  src: url('../fonts/rubik/Rubik-Bold.ttf'); 
+  font-weight: bold; 
+  font-style: normal; 
+}  */
+
 :root {
   --foreground-rgb: 0, 0, 0;
 
@@ -18,7 +31,6 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: var(--color-main);
-  font-family:'Igra Sans', 'Times New Roman', Times, serif;
 }
 
 @layer utilities {
