--- a/src/modules/Header/style.module.css
+++ b/src/modules/Header/style.module.css
@@ -6,7 +6,7 @@
   background-color: #1C1C1C;
   color: var(--color-white);
   border-radius: 20px;
-  font-family: 'Igra Sans';
+  /* font-family: 'Igra Sans'; */
 
 }
 
@@ -20,12 +20,12 @@
 }
 
 .navigation {
-  /* display: flex; */
-  /* align-items: center; */
-  /* justify-content: center; */
-  /* gap: 60px; */
-  /* height: 100%; */
-  /* flex: 1; */
+  /* display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 60px;
+  height: 100%;
+  flex: 1; */
   
 }
 
