--- a/src/components/ui/CallToAction/styles.module.css
+++ b/src/components/ui/CallToAction/styles.module.css
@@ -1,5 +1,4 @@
 .button {
-	width: 100%;
 
 	background-color: var(--color-accent-2);
 	border-radius: 150px;
@@ -8,7 +7,7 @@
 
 .text {
 	z-index: 0;
-	position: absolute;
+	position: relative;
 	user-select: none;
 	font-weight: 500;
 	text-transform: uppercase;
@@ -45,15 +44,15 @@
 	width: 100%;
 	width: 40px;
 	height: 40px;
-	right: 11px;
-	top: 12px;
+	right: 30px;
+	top: 30px;
 	transform: rotate(90deg);
 }
 
-@media (min-width: 480px) {
+@media (max-width: 360px) {
 	.button:hover .action .arrowCircle,
 	.button:target .action .arrowCircle {
-		right: 30px;
-		top: 30px;
+		right: 20px;
+		top: 22px;
 	}
 }
