--- a/src/modules/Header/style.module.css
+++ b/src/modules/Header/style.module.css
@@ -3,30 +3,22 @@
 
   font-size: medium;
 
-  background-color: #1C1C1C;
+  background-color: #1c1c1c;
   color: var(--color-white);
   border-radius: 20px;
   /* font-family: 'Igra Sans'; */
-
 }
 
-.logoDiv {
-  /* flex: 1; */
+@media (max-width: 768px) {
+  .header {
+    margin: 0 0 5px 0;
+    border-radius: 0 0 20px 20px;
+  }
 }
 
 .logo {
   width: 68px;
   height: 50px;
-}
-
-.navigation {
-  /* display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 60px;
-  height: 100%;
-  flex: 1; */
-  
 }
 
 .link {
@@ -36,10 +28,7 @@
 }
 
 .linkText {
-  /* display: flex; */
-  /* align-items: center; */
   height: 100%;
-
 }
 
 .linkBar {
@@ -50,7 +39,7 @@
 
   bottom: -2px;
 
-  transition: all .3s ease-out;
+  transition: all 0.3s ease-out;
 }
 .link:hover .linkBar {
   background-color: var(--color-accent-2);
@@ -58,23 +47,18 @@
 }
 
 .contacts {
-  /* display: flex; */
-  /* align-items: center; */
-  /* justify-content: end; */
   gap: 6px;
-  /* flex: 1; */
 }
 
 .telephone {
-  transition: all .3s ease-out;
+  transition: all 0.3s ease-out;
   padding: 0 40px;
 }
 .telephone:hover {
   color: var(--color-accent-2);
-
 }
 .contactLink {
-  transition: all .3s ease-out;
+  transition: all 0.3s ease-out;
   cursor: pointer;
 }
 
