--- a/src/modules/landing/FiveScreen/modules/components/style.module.css
+++ b/src/modules/landing/FiveScreen/modules/components/style.module.css
@@ -1,4 +1,3 @@
-
 .cardText {
   color: var(--color-additional-3);
 }
@@ -16,4 +15,34 @@
   width: 50px;
   height: 50px;
   background-color: var(--color-additional-3);
+}
+
+.cardVideo::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  box-sizing: border-box;
+  opacity: 0;
+  background-color: black;
+  transition: all .3s ease-out;
+}
+
+.cardVideo:hover::after {
+  opacity: .5;
+}
+
+.playerVideo {
+  z-index: 2;
+  left: 50%;
+  top: 50%;
+  margin-top: -68px;
+  margin-left: -68px;
+  opacity: 0;
+  transition: all .3s ease-out;
+}
+.cardVideo:hover .playerVideo {
+  opacity: 1;
 }
