--- a/src/components/ui/CallToAction/styles.module.css
+++ b/src/components/ui/CallToAction/styles.module.css
@@ -1,58 +1,67 @@
 .button {
-	background-color: var(--color-accent-2);
-	border-radius: 150px;
-	position: relative;
+  border-radius: 150px;
+  position: relative;
+}
+
+.button.yellow {
+  background-color: rgb(255 204 0);
+  fill: rgb(255 204 0);
+}
+
+.button.green {
+  background-color: var(--color-accent-2);
+  fill: #7001FE;
 }
 
 .text {
-	z-index: 0;
-	position: relative;
-	user-select: none;
-	font-weight: 500;
-	text-transform: uppercase;
-	transition: 0.3s ease-out;
+  z-index: 0;
+  position: relative;
+  user-select: none;
+  font-weight: 500;
+  text-transform: uppercase;
+  transition: 0.3s ease-out;
 }
 
 .action {
-	position: absolute;
-	background-color: var(--color-main);
-	z-index: 0;
-	right: 0;
-	top: 0;
-	border-radius: 150px;
+  position: absolute;
+  background-color: var(--color-main);
+  z-index: 0;
+  right: 0;
+  top: 0;
+  border-radius: 150px;
 
-	display: flex;
-	align-items: center;
-	justify-content: end;
+  display: flex;
+  align-items: center;
+  justify-content: end;
 
-	transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
 }
 
 .arrowCircle {
-	position: absolute;
-	border-radius: 50%;
-	transition: 0.3s ease-out;
+  position: absolute;
+  border-radius: 50%;
+  transition: 0.3s ease-out;
 }
 
 .button:hover .action,
 .button:target .action {
-	width: 100%;
+  width: 100%;
 }
 
 .button:hover .action .arrowCircle,
 .button:target .action .arrowCircle {
-	width: 100%;
-	width: 40px;
-	height: 40px;
-	right: 30px;
-	top: 30px;
-	transform: rotate(90deg);
+  width: 100%;
+  width: 40px;
+  height: 40px;
+  right: 30px;
+  top: 30px;
+  transform: rotate(90deg);
 }
 
 @media (max-width: 360px) {
-	.button:hover .action .arrowCircle,
-	.button:target .action .arrowCircle {
-		right: 20px;
-		top: 22px;
-	}
+  .button:hover .action .arrowCircle,
+  .button:target .action .arrowCircle {
+    right: 20px;
+    top: 22px;
+  }
 }
