--- a/src/app/service/bluesales/style.module.css
+++ b/src/app/service/bluesales/style.module.css
@@ -36,6 +36,34 @@
   padding: 4.375rem;
 }
 
+@media (min-width: 1536px) {
+  .contact_container {
+    background-color: transparent;
+  }
+}
+
+@media (max-width: 1500px) {
+  .container {
+    padding: 3rem;
+  }
+
+  .contact_container {
+    padding: 3rem;
+  }
+}
+
+@media (max-width: 991px) {
+  .container {
+    border-radius: 0.75rem;
+    padding: 1.25rem;
+  }
+
+  .contact_container {
+    border-radius: 0.75rem;
+    padding: 1.25rem;
+  }
+}
+
 .contact_container {
   margin-left: auto;
   margin-right: auto;
@@ -71,3 +99,167 @@
   outline-offset: 2px;
 }
 
+
+.screen {
+  border-radius: 35px;
+  overflow: hidden;
+  position: relative;
+}
+
+.title {
+  font-family: 'Igra Sans', sans-serif;
+}
+
+.titleSpan {
+  color: var(--color-accent);
+}
+
+.feedback {
+  background-color: #fff;
+}
+
+.massagerLink {
+  color: var(--color-additional);
+  border: 1px solid var(--color-accent);
+  flex: 1;
+}
+
+.feedbackInput {
+  color: var(--color-additional);
+  border: 1px solid #7001fe80;
+  flex: 1;
+  transition: all 0.3s ease-out;
+}
+
+.feedbackInput::placeholder {
+  text-transform: uppercase;
+}
+
+.feedbackInput:not(:placeholder-shown) {
+  border: 1px solid #7001fe80;
+}
+
+.feedbackInput:focus {
+  outline: none;
+}
+
+.feedbackInput:hover {
+  border: 1px solid var(--color-accent) !important;
+}
+
+.massagerLink,
+.massagerLink svg {
+  transition: all 0.3s ease-out;
+}
+
+.massagerLink:hover,
+.massagerLink.active {
+  background-color: var(--color-accent);
+  color: var(--color-main);
+}
+
+.massagerLink:hover svg,
+.massagerLink.active svg {
+  fill: var(--color-main);
+}
+
+.cta {
+  background-color: var(--color-accent-2);
+  color: var(--color-additional);
+  transition: all 0.3s ease-out;
+}
+
+.cta:hover {
+  background-color: var(--color-accent);
+  color: var(--color-main);
+}
+
+.aside {
+  background-color: var(--color-white);
+  background-size: 130%;
+  background-position: center 20%;
+  flex-direction: column;
+}
+
+.tablet {
+  background: #2c2c2c80;
+  box-shadow: 0px 0px 36.5px -12px #ffffff40 inset;
+  border-radius: 82px;
+  padding: 15px 87px 15px 15px;
+  color: var(--color-additional-2);
+
+  display: flex;
+  gap: 40px;
+  z-index: 9;
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+}
+
+.tabletCircle {
+  padding: 15px;
+  background: #8ffe01;
+  border: 1px solid #61616133;
+}
+
+.tabletBox {
+  transition: left 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+  left: 500px;
+  opacity: 0;
+}
+
+.tabletBox.active {
+  opacity: 1;
+  left: 0;
+}
+
+.section {
+  top: 0;
+  left: 0;
+  transition: all 0.3s ease;
+  pointer-events: none;
+  opacity: 0;
+  z-index: 9;
+}
+
+.section.active {
+  opacity: 1;
+}
+
+.overlay {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  opacity: 1;
+  pointer-events: none;
+}
+
+.modal {
+  background-color: #1c1c1c;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1.2);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  z-index: 9;
+  overflow: hidden;
+
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s linear;
+
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal.active {
+  transform: translate(-50%, -50%) scale(1);
+  opacity: 1;
+  pointer-events: all;
+}
+
+.gratitudeTitle {
+  color: var(--color-accent);
+}
+
+.gratitudeSubtitle {
+  color: #fff;
+}
